[gd_scene load_steps=5 format=3 uid="uid://qmq21ybs7sfc"]

[ext_resource type="PackedScene" uid="uid://ca8b1ym44ikmj" path="res://weapons/scimitar-cheap.glb" id="1_ypune"]
[ext_resource type="Script" path="res://scenes/temp/weapon.gd" id="2_ewli4"]
[ext_resource type="Script" path="res://scenes/temp/scimitar_cheap.gd" id="2_nc8b4"]

[sub_resource type="BoxShape3D" id="BoxShape3D_rti4f"]
size = Vector3(0.563477, 2.36261, 0.237305)

[node name="scimitar-cheap" instance=ExtResource("1_ypune")]
script = ExtResource("2_ewli4")

[node name="Area3d" type="Area3D" parent="." index="1" groups=["damage"]]
script = ExtResource("2_nc8b4")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3d" index="0"]
transform = Transform3D(0.999808, -0.0196162, 0, 0.0196162, 0.999808, 0, 0, 0, 1, -0.0671916, 2.40717, 0.0013113)
shape = SubResource("BoxShape3D_rti4f")

[connection signal="area_entered" from="Area3d" to="." method="_on_area_3d_area_entered"]
[connection signal="area_exited" from="Area3d" to="." method="_on_area_3d_area_exited"]
